--- a/index.html
+++ b/index.html
@@ -9,10 +9,14 @@
 
     </header>
     <body>
-        <nav>
-            <a class = "border" href = "index.html">John Nguyen's Portfolio</a>
+        <div id = "nav">
+            <a href = "index.html">John Nguyen's Portfolio</a>
             <a href = "https://jnguwin.github.io/John-Nguyen-Technology-Blog/">John's Technology Blog</a>
-        </nav>
+            <a href = "">Link 3</a>
+            <a href = "">Link 4</a>
+            <a href = "">Link 5</a>
+            <a href = "">Link 6</a>
+        </div>
         <p>
             A project idea that I want to work on is creating my first VR program or 
             create a well designed web page. For my VR program I hope to create an
