--- a/index.html
+++ b/index.html
@@ -9,14 +9,14 @@
 
     </header>
     <body>
-        <div id = "nav">
+        <nav>
             <a href = "index.html">John Nguyen's Portfolio</a>
             <a href = "https://jnguwin.github.io/John-Nguyen-Technology-Blog/">John's Technology Blog</a>
             <a href = "">Link 3</a>
             <a href = "">Link 4</a>
             <a href = "">Link 5</a>
             <a href = "">Link 6</a>
-        </div>
+        </nav>
         <p>
             A project idea that I want to work on is creating my first VR program or 
             create a well designed web page. For my VR program I hope to create an
