--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
         <nav>
             <a href = "index.html">John Nguyen's Portfolio</a>
             <a href = "https://jnguwin.github.io/John-Nguyen-Technology-Blog/">John's Technology Blog</a>
-            <a href = "">Link 3</a>
-            <a href = "">Link 4</a>
+            <a href = "">About Me!</a>
+            <a href = "">LinkedIn</a>
             <a href = "">Link 5</a>
             <a href = "">Link 6</a>
         </nav>
