Added different color scheme

--- a/index.html
+++ b/index.html
@@ -17,13 +17,36 @@
             <a href = "">Link 5</a>
             <a href = "">Link 6</a>
         </nav>
-        <p>
-            A project idea that I want to work on is creating my first VR program or 
-            create a well designed web page. For my VR program I hope to create an
-            interactive environment where you are free to move around and interact 
-            with objects, people, and animals. If I was to choose building a web page I 
-            would like to create a home page like website that is comparable to a 
-            professional web page for a major company.
-        </p>
+        <div id = "top-picture">
+            <video width = "100%" autoplay>
+                <source src = "Images/GalaxyWelcome.mp4" type = "video/mp4">
+            </video> 
+        </div>        
+
+        <div id = "container">
+            <p class = "text">
+                A project idea that I want to work on is creating my first VR program or 
+                create a well designed web page. For my VR program I hope to create an
+                interactive environment where you are free to move around and interact 
+                with objects, people, and animals. If I was to choose building a web page I 
+                would like to create a home page like website that is comparable to a 
+                professional web page for a major company.
+            </p>
+        </div>
+        <div id = "container">
+            <p class = "text">
+                To be continued.
+            </p>
+        </div>
+        <div id = "container">
+            <p class = "text">
+                To be continued.
+            </p>
+        </div>
+        <div id = "container">
+            <p class = "text">
+                To be continued.
+            </p>
+        </div>
     </body>
 </html>
