--- a/index.html
+++ b/index.html
@@ -10,12 +10,12 @@
     </header>
     <body>
         <nav>
+            <a href = "">Home</a>
             <a href = "index.html">John Nguyen's Portfolio</a>
             <a href = "https://jnguwin.github.io/John-Nguyen-Technology-Blog/">John's Technology Blog</a>
-            <a href = "">About Me!</a>
+            <a href = "aboutme.html">About Me!</a>
             <a href = "">LinkedIn</a>
             <a href = "">Link 5</a>
-            <a href = "">Link 6</a>
         </nav>
         <div id = "top-picture">
             <video width = "100%" autoplay>
@@ -25,17 +25,18 @@
 
         <div id = "container">
             <p class = "text">
+                Check out all the projects I have worked on myself
+                in the links above!
+            </p>
+        </div>
+        <div id = "container">
+            <p class = "text">
                 A project idea that I want to work on is creating my first VR program or 
                 create a well designed web page. For my VR program I hope to create an
                 interactive environment where you are free to move around and interact 
                 with objects, people, and animals. If I was to choose building a web page I 
                 would like to create a home page like website that is comparable to a 
                 professional web page for a major company.
-            </p>
-        </div>
-        <div id = "container">
-            <p class = "text">
-                To be continued.
             </p>
         </div>
         <div id = "container">
