--- a/index.html
+++ b/index.html
@@ -10,12 +10,10 @@
     </header>
     <body>
         <nav>
-            <a href = "">Home</a>
-            <a href = "index.html">John Nguyen's Portfolio</a>
+            <a href = "index.html">Home!</a>
             <a href = "https://jnguwin.github.io/John-Nguyen-Technology-Blog/">John's Technology Blog</a>
             <a href = "aboutme.html">About Me!</a>
             <a href = "">LinkedIn</a>
-            <a href = "">Link 5</a>
         </nav>
         <div id = "top-picture">
             <video width = "100%" autoplay>
