added to about me

--- a/aboutme.html
+++ b/aboutme.html
@@ -15,5 +15,36 @@
             <a href = "aboutme.html">About Me!</a>
             <a href = "">LinkedIn</a>
         </nav>
+
+        <div id = "Divider">
+            <div id = "left-container">
+                <img src = "Images/ProfilePicture.jpg" alt = "Profile picture">
+            </div>
+            <div id = "right-container">
+                <p><h3 class = "blue">About the author</h3></p>
+                <p class = "blue">
+                    Welcome to my first webpage! Getting to know me a little bit I am a first-generation American. The first one in my 
+                    family born in the U.S. and oldest of all my cousins. What got me here today was my love and interest in technology.
+                    My first piece of technology that started it all would be the Nintendo Gamecube, it was such a fun system
+                    to play with friends and family or just by yourself. Then technology started evolving and cellphones, desktops, and 
+                    laptops became more known and available to the masses and my collection of gadgets started growing. 
+                </p>
+                <p class = "blue">
+                    From there the internet became such a huge thing in peopes lives. Connecting people on social media, video games,
+                    and different apps. In today's time almost everything in our daily lives are virtual now. All of these things
+                    use some type of pragramming language to create and that sparked my interest in wanting to learn how these
+                    things work and are created. I also believe tech will always continue to grow and be bigger 
+                    in the future and knowing computer languages is a great skill to have and a great industry to get into. 
+                    That is what got me here today pursuing a career in the Tech industry!
+                </p>
+                <p class = "blue">
+                    Some of my personal interest that I do on my free time is playing video games! I enjoy all types of games from 
+                    single player RPG's to multiplayer games. I also love entertainment so I watch alot of anime and TV but I would
+                    say anime would be one of my top genres to watch. I am also a gym rat, I spend a lot of time in the gym to stay 
+                    in shape and maintain a healthy lifestyle!
+                </p>
+            </div>
+
+        </div>
     </body>
 </html>
