--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
             <a href = "index.html">Home!</a>
             <a href = "https://jnguwin.github.io/John-Nguyen-Technology-Blog/">John's Technology Blog</a>
             <a href = "aboutme.html">About Me!</a>
-            <a href = "">LinkedIn</a>
+            <a href = "https://www.linkedin.com/in/john-nguyen-35b357231/">LinkedIn</a>
         </nav>
         <div id = "top-picture">
             <video width = "100%" autoplay>
