added link to project

--- a/index.html
+++ b/index.html
@@ -28,14 +28,8 @@
             </p>
         </div>
         <div id = "container">
-            <p class = "text">
-                A project idea that I want to work on is creating my first VR program or 
-                create a well designed web page. For my VR program I hope to create an
-                interactive environment where you are free to move around and interact 
-                with objects, people, and animals. If I was to choose building a web page I 
-                would like to create a home page like website that is comparable to a 
-                professional web page for a major company.
-            </p>
+            <p></p>
+            <a href = "https://jnguwin.github.io/POS_System/"><img src = "Images/pizza.jpg" width = 100%></a>>
         </div>
     </body>
 </html>
