--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         </div>
         <div id = "container">
             <p></p>
-            <a href = "https://jnguwin.github.io/POS_System/"><img src = "Images/pizza.jpg" width = 100%></a>>
+            <a href = "https://jnguwin.github.io/POS_System/"><img src = "Images/pizza.jpg" width = 100% height = 80%></a>>
         </div>
     </body>
 </html>
