--- a/index.html
+++ b/index.html
@@ -23,8 +23,42 @@
 
         <div id = "container">
             <p class = "text">
-                Check out all the projects I have worked on myself
-                in the links above!
+            UPDATES
+            1) This project was difficult at first because javascript was a new concept
+                so learning how to create buttons and text fields was the first obstacle.
+            2) Setting the names and values and knowing the differences and what they do
+                took me a bit of time to understand
+            3) I learned how to use the id in javascript to get value from the html doc
+            4) Creating the drop down list for drink and size was one of my first obstacles,
+                by using select and option I was able to create a drop down and assign values
+            5) Using labels and inputs I was able to create text fields for customer inputs
+            6) Similar to C# I created a click event that starts the whole process
+            7) Within that click event I set my variables using "let" and "document.getElementById"
+            8) Using those values I was able to create a layout of information for an order 
+                in the display box
+            9) I ran into trouble displaying the selected option in drop down list and text fields
+            10) I was able to overcome this by adding ".value" at the end of the variable name
+            11) Clearing the display box after every click and incrementing the customer number
+            is the last thing I need to do to finish my project
+            12) Will was able to help me clear display and show incrementing 
+
+
+            DOCUMENTATION
+            - My project is a point of sale system for ordering a pizza
+            - First I created a GUI first that started with a navigation bar at the top
+            - I added an image of a pizza so you know you came to the right place and to
+                appeal to the customer
+            - Then I created 3 different containers from left to right
+            - The left containing customer number, pizza size, and toppings
+            - The middle shows the display
+            - The right contains the drink, size, and customer information
+            - At the very bottom is also 3 containers left to right with the button in
+            the middle
+            - I styled my page to match the colorway of the pizza image which is red and yellow
+            - The last half of this project was creating the javascript to display the information
+            in the display
+            - That part is explained in the UPDATES above
+
             </p>
         </div>
         <div id = "container">
