added new profile picture

--- a/aboutme.html
+++ b/aboutme.html
@@ -18,7 +18,7 @@
 
         <div id = "Divider">
             <div id = "left-container">
-                <img src = "Images/ProfilePicture.jpg" alt = "Profile picture">
+                <img src = "Images/LinkedIn.JPG" alt = "Profile picture">
             </div>
             <div id = "right-container">
                 <p><h3 class = "blue">About the author</h3></p>
